# MSRpuzzlebot_control

./: .gitignore  .gitmodules  frames_2025-04-25_16.54.55.gv  frames_2025-04-25_16.57.35.gv  frames_2025-04-25_17.09.05.gv  frames_2025-04-25_17.17.47.gv  frames_2025-06-03_21.04.31.gv  frames_2025-06-03_21.04.53.gv
control_motor8/: control_motor8.ino
data/rosbag_checkerboard/rosbag2_2025_06_07-20_47_51/: metadata.yaml
data/rosbag_crossroad/rosbag2_2025_06_07-17_27_53/: metadata.yaml
data/rosbag_moving/rosbag2_2025_05_31-21_11_10/: metadata.yaml
data/rosbag_static/rosbag2_2025_05_31-21_07_47/: metadata.yaml
src/custom_interfaces/: CMakeLists.txt  package.xml  verificar_servicios_ros2.md
src/custom_interfaces/srv/: SwitchPublisher.srv
src/line_follow_msr/: package.xml  setup.cfg  setup.py
src/line_follow_msr/data/: homography2.npy  homography3.npy  homography_after_calib_firstsegment_decent.npy  homography_after_calib_secondsegment_decent.npy  homography_copy.npy  homography_long.npy  homography_master1.npy  homography_master2.npy  homography_msr1.npy  homography_msr2.npy  homography_msr3.npy  homography_saved.npy
src/line_follow_msr/line_follow_msr/: crossroad_detection.py  crossroad_detection_for_launch.py  line_follower.py  line_follower_THICK.py  line_follower_WesternBacon.py  line_follower_bigChungus.py  line_follower_bigbigChungus.py  line_follower_gordo.py  line_follower_hamburguesota.py  line_follower_obesidad.py  line_follower_obesidad_I.py  line_follower_obesidad_II.py  line_follower_obesidad_I_for_launch.py  line_follower_samu.py  line_follower_sobrepeso.py  pid_controller.py  turn_manager.py  turn_manager_node.py
src/map_context_tests/: README.md
src/map_context_tests/data/: 2.yaml  A3_202.yaml
src/map_context_tests/map_context_tests/: map_tagger.py
src/motor_control/: package.xml  setup.py
src/motor_control/config/: square_path.yaml
src/motor_control/launch/: line_follower_launch.py  motor_2_launch.py  motor_4_launch.py  motor_gazebo_launch.py  motor_integration_launch.py  motor_launch.py  motor_openloop_launch.py  motor_putopath_launch.py  motor_self_putopath_launch.py  puzzlebot_simulation_launch.py
src/motor_control/motor_control/: cmd_vel_mux.py  controller.py  cubic_control.py  curve_control.py  detection_fsm.py  escaneo_3d_node.py  (+21 more)
src/msr_camera_calibration/: package.xml  setup.cfg  setup.py
src/msr_detection/: package.xml  setup.cfg  setup.py
src/msr_localization/: package.xml  setup.cfg  setup.py
src/msr_simulation/: package.xml  setup.cfg  setup.py
(+47 files in other folders)
